@@ -25,17 +25,15 @@ import java.time.DayOfWeek;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static fr.openmc.core.features.city.sub.notation.NotationNote.getMaxTotalNote;
-
 public class NotationManager {
 
     private static final DayOfWeek APPLY_NOTATION_DAY = DayOfWeek.MONDAY;
 
-    public static final HashMap<String, List<CityNotation>> notationPerWeek = new HashMap<>(); // weekStr -> List of CityNotation
-    public static final HashMap<String, List<CityNotation>> cityNotations = new HashMap<>(); // cityUUID -> List of CityNotation
+    public static final Map<String, List<CityNotation>> notationPerWeek = new HashMap<>(); // weekStr -> List of CityNotation
+    public static final Map<String, List<CityNotation>> cityNotations = new HashMap<>(); // cityUUID -> List of CityNotation
 
 
-    public static final HashMap<UUID, Long> activityNotation = new HashMap<>();
+    public static final Map<UUID, Long> activityNotation = new HashMap<>();
     public static final Set<String> top10Cities = new HashSet<>();
 
     private static Dao<ActivityTimePlayed, String> activityTimePlayedDao;
@@ -140,9 +138,9 @@ public class NotationManager {
 
         return notations.stream()
                 .sorted(Comparator.comparingDouble(
-                        n -> ((CityNotation) n).getNoteArchitectural() + ((CityNotation) n).getNoteCoherence()
+                        (CityNotation n) -> n.getNoteArchitectural() + n.getNoteCoherence()
                 ).reversed())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static double getActivityScore(City city) throws SQLException {
